--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,7 @@
 @import url('https://fonts.googleapis.com/css2? family= Krub:ital,wght@0,700;1,300 & display=swap');
 /*index*/
 body {
-    background-image: url(https://cdn.todomountainbike.net/images/articles/2023/colnago-v4rs.jpg);
-}
+background-color: black;}
 header{
     background-color: black;
 }
@@ -29,6 +28,7 @@ header{
 .logos img{
     height: 250px;
     width: 250px;
+    
 }
 .nav-bg{
     background-color:#00000039 ; 
