--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,26 @@ header{
     text-decoration: none;
 }
 /*/main/*/
+main{
+    padding-top: 15px;
+}
 
+ul{
+    padding-left: 0px;
+    list-style: none;
+}
+.imagen-index{
+    filter:grayscale(0.8);
+    transition: all 0.3s ease;
+}
+.imagen-index:hover{
+ filter:grayscale(0);
+
+}
 .logos {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .logos .card {
@@ -83,14 +99,18 @@ footer{
 /*formulario*/
 
 .formulario {
-    width: 100%;
-    max-width: 600px;
+    padding: 15px;
+    margin-top: 15px;
+    max-width: 290px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
+    border: 1px solid #dedede;
+    border-radius: 4px;
+    background-color: rgb(0 0 0 / 50%);
 }
 .form input {
     width: 90%;
@@ -121,12 +141,6 @@ footer{
 .form-input textarea {
     resize: none;
     height: inherit;
-}
-
-fieldset {
-    border: 1px solid #dedede;
-    border-radius: 4px;
-    background-color: rgb(0 0 0 / 50%);
 }
 
 footer {
