--- a/scss/scss/index.scss
+++ b/scss/scss/index.scss
@@ -27,3 +27,10 @@
     flex: center;
     justify-content: start;
 }
+.contenedor{
+    width: center;
+    margin: 0 auto;
+    padding: 1rem;
+    display:flex;
+    justify-content:space-around;
+}
