--- a/scss/scss/_contacto.scss
+++ b/scss/scss/_contacto.scss
@@ -10,25 +10,24 @@
   color: white;
   border: 1px solid #dedede;
   border-radius: 4px;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-.formulario h4 {
-  font-size: 1.3rem;
-  margin-bottom: 30px;
-}
+  background-color: rgb(0 0 0 / 50%);
 
+  h4 {
+    font-size: 1.3rem;
+    margin-bottom: 30px;
+  }
+}
 .form input {
   width: 90%;
   height: 30px;
   margin: 0.5rem;
 }
-
-.envair {
+.enviar {
+  text-align: center;
   width: 90%;
   height: 30px;
   margin: 0.5rem;
 }
-
 .boton {
   background-color: #259917;
   border: none;
@@ -43,7 +42,8 @@
   line-height: 1.5;
 }
 
-.form-input input, .form-input textarea {
+.form-input input,
+.form-input textarea {
   height: 1.8em;
   margin-bottom: 15px;
 }
@@ -60,5 +60,3 @@
   padding: 8px 12px;
   cursor: pointer;
 }
-
-/*# sourceMappingURL=contacto.css.map */
