--- a/scss/scss/_index.scss
+++ b/scss/scss/_index.scss
@@ -1,35 +1,39 @@
-
+//imaganes con enlaces
 .imagen-index {
   filter: grayscale(0.8);
   transition: all 0.3s ease;
 }
+//animacion y card
 .imagen-index:hover {
   filter: grayscale(0);
 }
+
+.logos .card {
+  --bs-card-bg: rgba(59, 26, 130, 0.086);
+}
+
+.logos img {
+  height: 250px;
+  width: 250px;
+  margin: 50px;
+}
+
+
+.carrera {
+  flex: center;
+  justify-content: start;
+}
+
+//redes sociales
 .logos {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
 
-.logos .card {
-  --bs-card-bg: rgba(0, 0, 0, 0.075);
-}
-
-.logos img {
-  height: 250px;
-  width: 250px;
-  margin: 15px;
-}
-
-.carrera {
-  flex: center;
-  justify-content: start;
-}
 .contenedor {
   width: center;
   margin: 0 auto;
   padding: 1rem;
-  display: flex;
   justify-content: space-around;
 }
