--- a/scss/scss/_footer.scss
+++ b/scss/scss/_footer.scss
@@ -1,17 +1,13 @@
-
 footer {
-    background-color: rgba(0,0,0,.5);
-    position:relative;
-    width: 100%;
-    text-align: center;
-    padding: 15px;
-    background-color: black;
-    border: none;
-    
-}   
-
-.redes img{
-    width: 40px;
-    height: 40px;
+  position: relative;
+  width: 100%;
+  text-align: center;
+  padding: 15px;
+  background-color: rgb(76, 76, 76);
+  border: none;
 }
 
+.redes img {
+  width: 40px;
+  height: 40px;
+}
